<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.8"
    android:background="@drawable/shape_pop_window_coner">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctlayout_title"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/tv_adjust_volume"
            android:textSize="@dimen/btn_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imv_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_white_del"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#bad7c8"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctlayout_seekbars"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctlayout_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctlayout_left_skbar_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/guideline0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/left"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                android:id="@+id/tv_reduce"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/reduce"
                app:layout_constraintTop_toTopOf="@+id/tv_title"
                app:layout_constraintBottom_toBottomOf="@id/tv_title"
                app:layout_constraintStart_toEndOf="@id/tv_title"/>
            <SeekBar
                android:id="@+id/skb_L_Volume"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:progressDrawable="@drawable/seekbar_style"
                android:thumb="@android:drawable/ic_notification_overlay"
                android:thumbOffset="0dp"
                app:layout_constraintTop_toTopOf="@id/tv_reduce"
                app:layout_constraintBottom_toBottomOf="@id/tv_reduce"
                app:layout_constraintStart_toEndOf="@id/tv_reduce"
                app:layout_constraintEnd_toStartOf="@id/tv_increase"/>
            <TextView
                android:id="@+id/tv_increase"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/plus"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="4dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctlayout_right_skbar_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline0"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="8dp">
            <TextView
                android:id="@+id/tv_title_r"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Right"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tv_reduce_r"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/reduce"
                app:layout_constraintTop_toTopOf="@+id/tv_title_r"
                app:layout_constraintBottom_toBottomOf="@id/tv_title_r"
                app:layout_constraintStart_toEndOf="@id/tv_title_r"/>
            <SeekBar
                android:id="@+id/skb_R_Volume"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:progressDrawable="@drawable/seekbar_style"
                android:thumb="@android:drawable/ic_notification_overlay"
                android:thumbOffset="0dp"
                app:layout_constraintTop_toTopOf="@id/tv_reduce_r"
                app:layout_constraintBottom_toBottomOf="@id/tv_reduce_r"
                app:layout_constraintStart_toEndOf="@id/tv_reduce_r"
                app:layout_constraintEnd_toStartOf="@id/tv_increase_r"/>
            <TextView
                android:id="@+id/tv_increase_r"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/plus"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="4dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>