<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_blue"
    android:clickable="true">
    <ImageView
        android:id="@+id/sv_earbuds_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:background="@mipmap/sv_appearance_icon"/>

    <LinearLayout
        android:layout_below="@+id/sv_earbuds_icon"
        android:id="@+id/tv_earbuds_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sv_earbuds_name"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sv_earbuds_ads"
            android:gravity="center"
            android:textColor="@color/gray"
            android:textSize="15sp"/>
        <RelativeLayout
            android:layout_margin="30dp"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:padding="15dp"
            android:alpha="200"
            android:background="@drawable/shape_light_blue_conner">
            <RelativeLayout
                android:id="@+id/function_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-续航-"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="25dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-防水-"
                    android:layout_centerInParent="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-功能-"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="25dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_below="@+id/function_title"
                android:id="@+id/function_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="持久续航"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="IPX5"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="入耳检测"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:textColor="@color/white"/>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy_now"
            android:textColor="@color/btn_login_color"
            android:layout_marginBottom="20dp"/>
        <Button
            android:id="@+id/btn_start_pair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="开始配对"
            android:clickable="false"
            android:textSize="25sp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textColor="@drawable/btn_color_selector"
            android:background="@drawable/shape_btn"/>
    </LinearLayout>
</RelativeLayout>